# orthography2ipa

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GLOTTOLOG_AUDIT.md  LICENSE  MAINTENANCE_REPORT.md  PLAN.md  QUICK_FACTS.md  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  SUGGESTIONS.md  TODO.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: benchmark-regression.yml  coverage.yml  license_check.yml  pages.yml  publish_stable.yml  release_workflow.yml  unit_tests.yml
benchmarks/: comparison.json  espeak_agreement.json  latency.py  lexicon_results.json  results.json  results_ci_sample.json
docs/: README.md  adding_a_language.md  allophony.md  ancestry.md  api_stability.md  arabic-tts-gold.md  architecture.md  benchmarks.md  bibliography.md  candidate_scoring.md  comparison.md  creoles-atlantic-tts-gold.md  data_model.md  distance.md  espeak_agreement.md  explorer.md  features.md  forcing_a_pronunciation.md  getting_started.md  glottolog_audit.md  iberian-creole-tts-gold.md  index.md  ipa_reference.md  kabyle-tts-gold.md  lattice.md  lattice_per.md  lexicon_scoreboard.md  linguistic_accuracy.md  link-audit.md  orthography_kind.md  portuguese-tts-gold.md  positional_graphemes.md  quality_tiers.md  registry.md  scoreboard.md  sentence_context.md  spain-romance-tts-gold.md  tokenizer.md
docs/languages/: an-valleys.md  ar-IQ.md  ar-maghrebi-yemeni-sudanese.md  ar-x-levantine.md  ar.md  de-DE.md  en-GB.md  eo.md  es-ES.md  eu.md  ext-PT-x-barrancos.md  fi.md  fr-FR.md  germanic.md  hi.md  index.md  it-IT.md  kab.md  lij.md  mwl.md  pt-AO.md  pt-BR-x-brasilia.md  pt-BR-x-caipira.md  pt-BR-x-fluminense.md  pt-BR-x-mg.md  pt-BR-x-norte.md  pt-BR-x-pr.md  pt-BR-x-rj.md  pt-BR-x-sp.md  pt-BR-x-sul.md  pt-BR.md  pt-CV.md  pt-MO.md  pt-MZ.md  pt-PT-x-acores.md  pt-PT-x-alentejo.md  pt-PT-x-alfena.md  pt-PT-x-algarve.md  pt-PT-x-aveiro.md  pt-PT-x-beira.md  (+16 more)
docs/misc_research/: barranquenho_phonological_analysis.md  guadramilese_analysis.md  portuguese_dialect_phonological_analysis.md
dump/tests/: test_lang_positional.py
examples/: 01_basic_usage.py  02_distance_metrics.py  02_tokenizer.py  03_crosslingual_graph_embeddings.ipynb  03_distance_metrics.py  03_tokenizer.py  04_dialect_comparison.py  04_dialect_transforms.py  04_g2p_neural_perplexity.ipynb  05_ancestry_and_history.py  05_script_distance.py  06_advanced_nlp.py  06_sandhi.py  07_lattice_and_rescorer.py  08_lexicon_overlay.py  README.md  feats_analysis.ipynb  feats_benchmark.ipynb  phonetok_usage.ipynb
orthography2ipa/: __init__.py  allophony.py  cli.py  conformance.py  distance.py  exceptions.py  feats.py  features.py  g2p.py  g2p_plugin.py  inventory.py  json_loader.py  lattice_per.py  lexicon.py  lm.py  markup.py  phonetok.py  plugins.py  positional.py  registry.py  rescorer.py  rescorer_plugin.py  sandhi.py  schema.py  script_distance.py  sentence.py  stress.py  stress_plugin.py  syllabifier_plugin.py  syllabifiers.py  transforms.py  types.py  underspecification.py  version.py  vowels.py  weights.py
orthography2ipa/data/: SCHEMA.md  aa.json  ab.json  ace.json  acm.json  acy.json  ady.json  af.json  afa.json  aii.json  ain.json  ak.json  akk.json  ale.json  alt.json  am.json  ami.json  an-x-ansotano.json  an-x-belsetan.json  an-x-benasques.json  an-x-cheso.json  an-x-chistabin.json  an-x-occidental.json  an-x-oriental.json  an-x-tensino.json  (+873 more)
scripts/: _gold_build.py  arabic_tts_gold.py  benchmark.py  build_en_lexicon.py  check_benchmark_regression.py  check_glottolog_codes.py  compare_systems.py  creoles_atlantic_tts_gold.py  dialect_places.py  error_analysis.py  espeak_agreement.py  gen_arabic_orthography_keys.py  gen_explorer.py  gen_family.py  gen_locations.py  iberian_creole_tts_gold.py  kabyle_tts_gold.py  portuguese_tts_gold.py  spain_romance_tts_gold.py
test/: test_cross_language.py  test_distance.py  test_language_integrity.py
tests/: conftest.py  pytest.ini  test_abugida.py  test_algerian_phonology.py  test_all_languages.py  test_allophone_rules.py  test_allophony_geminate_atomicity.py  test_an.py  test_ancestry_enrichment_round1.py  test_ancestry_enrichment_round2_ie.py  test_ancestry_enrichment_round2_nonie.py  test_ar_diacritized_loader.py  test_arabic.py  test_arabic_creoles.py  test_arabic_dialect_orthography.py  test_arabic_dialects.py  test_arabic_engine_improvements.py  test_arabic_g2p.py  test_arabic_glides.py  test_arabic_gulf.py  test_arabic_iraqi.py  test_arabic_levantine.py  test_arabic_tts_gold.py  test_aragonese_valleys.py  test_ast.py  test_asturleonese_sources.py  test_barranquenho.py  test_basque_dialects.py  test_bootstrap_ci.py  test_br_carioca.py  test_br_dialects.py  test_br_paulista.py  test_broad_normalize_place_diacritics.py  test_candidate_weights.py  test_catalan_phonology.py  test_catalan_reduction.py  test_catalog_crossrefs.py  test_celtic.py  test_centro_sul_phonology.py  test_check_benchmark_regression.py  (+153 more)
(+297 files in other folders)
