[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orthography2ipa"
dynamic = ["version", "dependencies"]
description = "Linguistically motivated grapheme-to-IPA and allophone mappings for 20+ languages"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["ipa", "phonetics", "phonology", "grapheme", "allophone", "linguistics", "nlp"]

[tool.setuptools.dynamic]
version = {attr = "orthography2ipa.version.VERSION_STR"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/TigreGotico/orthography2ipa"
Issues = "https://github.com/TigreGotico/orthography2ipa/issues"

[tool.setuptools.packages.find]
include = ["orthography2ipa*"]
